cluster/apps/default/torrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torrent
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: torrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: torrent
    spec:
      containers:
      - name: vpn
        image: linuxserver/wireguard:1.0.20210914 # {"$imagepolicy": "flux-system:wireguard"}
        securityContext:
          privileged: true
          sysctls:
          - name: net.ipv6.conf.all.disable_ipv6
            value: "1"
          - name: net.ipv4.conf.all.src_valid_mark
            value: "1"
        livenessProbe:
          exec:
            command:
            - ping
            - -c1
            - www.google.com
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - mountPath: /config
          name: wireguard-volume
      - name: torrent
        image: linuxserver/qbittorrent:4.5.4 # {"$imagepolicy": "flux-system:qbittorrent"}
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - mountPath: /config
          name: config-volume
        - mountPath: /media
          name: media-volume
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: torrent-config
      - name: wireguard-volume
        persistentVolumeClaim:
          claimName: wireguard-config
      - name: media-volume
        nfs:
          server: sc01.${SECRET_PRIVATE_DOMAIN}
          path: /mnt/dpool/media
