cluster/apps/default/torrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torrent
spec:
  ports:
    - port: 8112
  selector:
    app.kubernetes.io/name: torrent
